# forest-sounds

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  PRUNING.md  README.md  cliff.toml  justfile  pyproject.toml  quick-training-run.ipynb  sound_classification_report.ipynb  training_ntbk.ipynb
.github/workflows/: python.yml  release.yml
data/fsc22/: 5-fold.csv
docs/: OPTIMIZERS.md  XAI.md
soundedge-esc-application/: .dockerignore  .gitattributes  Dockerfile  README.md  app.py  classes.py  model.py  preprocessing.py  pyproject.toml  requirements-train.txt  requirements.txt  utils.py
soundedge-esc-application/.streamlit/: config.toml
soundedge-esc-application/compression/: args.py  cv_optimize.py  optimize.py  pruning.py  qat.py
soundedge-esc-application/custom_layers/: PCAw_Pool.py  WavKAN.py  eigen.py  pcaw_pool.py  ssrp_ms.py  wavelets.py  wavkan.py
soundedge-esc-application/src/: streamlit_app.py
soundedge-esc-application/training/: args.py  augment.py  cross_validate.py  fsc22_dataset.py  gpu_mel.py  train.py  wnb.py
utils/: __init__.py  augment.py  clean.py  data.py  features.py  io.py  knowledge_distillation.py  metrics.py  models.py  models_alt.py  pareto.py  pipeline.py  preprocess.py  train.py  viz.py  xai.py
utils/tests/: test_smoke.py
