[project]
name = "forest-sounds"
version = "0.1.0"
description = "Forest sound classification"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "librosa",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "torch",
    "torchaudio",
    "transformers",
    "panns-inference",
    "pykan",
    "ipython",
    "ipykernel",
    # "efficient-kan",
    "jaxtyping",
    "wandb",
]

[tool.uv]
package = false

# [tool.uv.sources]
# efficient-kan = { git = "https://github.com/Blealtan/efficient-kan.git", rev = "main" }
