[project]
name = "forest-sounds"
version = "0.1.0"
description = "Forest sound classification"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "librosa",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "torch",
    "torchaudio",
    "transformers",
    "panns-inference",
    "pykan",
    "ipython",
    "ipykernel",
    # "efficient-kan",
    "jaxtyping",
    "sophia-optimizer",
    "wandb",
]

[dependency-groups]
dev = ["ruff", "pytest", "basedpyright"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "ANN", # flake8-annotations — enforce annotations basedpyright relies on
    "TC",  # flake8-type-checking — TYPE_CHECKING import hygiene
    "FA",  # flake8-future-annotations
    "PYI", # flake8-pyi
]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

# [tool.uv.sources]
# efficient-kan = { git = "https://github.com/Blealtan/efficient-kan.git", rev = "main" }
